@@ -279,6 +279,7 @@ extern int errno;
 #define CF_ALLCLASSSIZE (4*CF_BUFSIZE)
 #define CF_BUFFERMARGIN 32
 #define CF_BLOWFISHSIZE 16
+#define CF_SMALLBUF 128
 #define CF_MAXVARSIZE 1024
 #define CF_NONCELEN (CF_BUFSIZE/16)
 #define CF_MAXLINKSIZE 256
